--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebWise Consulting</title>
+  <title>Cliptech Inc</title>
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,15 +23,15 @@
       data = [
         {
           "title": "Web Design",
-          "description": "Vivamus eu scelerisque mi, quis sodales lectus. Nunc vulputate massa sit amet sapien accumsan imperdiet. Nulla in ipsum et sem porttitor tristique vitae nec mauris."
+          "description": "We create stunning and responsive designs tailored to your brand."
         },
         {
           "title": "Web Development",
-          "description": "Vivamus eu scelerisque mi, quis sodales lectus. Nunc vulputate massa sit amet sapien accumsan imperdiet. Nulla in ipsum et sem porttitor tristique vitae nec mauris."
+          "description": "Our developers build custom websites and applications with cutting-edge technologies."
         },
         {
           "title": "SEO & Marketing",
-          "description": "Vivamus eu scelerisque mi, quis sodales lectus. Nunc vulputate massa sit amet sapien accumsan imperdiet. Nulla in ipsum et sem porttitor tristique vitae nec mauris."
+          "description": "We optimize websites for search engines and create effective digital marketing strategies."
         }
       ]
 
@@ -57,7 +57,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">WebWise Consulting</a>
+      <a class="navbar-brand" href="#">Cliptech Inc</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -86,28 +86,31 @@
 
   <section id="home" class="section">
     <div class="container">
-      <h1>Welcome to WebWise Consulting</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta vestibulum magna vitae
-        tempor. Maecenas ultricies metus id arcu imperdiet consectetur. Pellentesque habitant morbi tristique senectus
-        et netus et malesuada fames ac turpis egestas. Vivamus rutrum quam diam, eu cursus diam mollis ut. Vivamus nibh
-        ligula, porta quis elementum et, rhoncus et massa. Nullam in erat vitae eros consequat sollicitudin in a lectus.
-        Nullam vel tellus scelerisque, scelerisque enim non, ullamcorper quam. In lobortis mollis laoreet. Vivamus
-        congue mi elit, vel euismod dolor semper non. Donec ultricies, ligula a congue placerat, urna erat vulputate
-        felis, eu commodo ligula ipsum sed ante. Aenean magna tellus, egestas vitae dolor eu, tincidunt maximus nisl.
-        Maecenas rutrum tortor vitae erat tincidunt bibendum. Maecenas quis luctus lectus, sed hendrerit dui. Quisque
-        porttitor tincidunt mi sit amet pretium. Nulla risus ex, convallis dignissim condimentum sed, tempor sed massa.
+      <h1>Welcome to Cliptech Inc</h1>
+      <!-- this section was written with https://chat.openai.com/share/2d3a7483-b6cb-42b3-8efd-8ccf3b006bca-->
+      <p class="lead">
+        Welcome to Cliptech Inc, a leading tech company specializing in website development.
+        With a proven track record of crafting dynamic online experiences for major brands such as Nike and McDonald's,
+        our team of skilled software engineers is dedicated to creating creative and unique websites tailored to enhance
+        your company's visual appeal and attract a broader customer base.
       </p>
     </div>
   </section>
 
   <section id="about" class="section">
     <div class="container">
+      <!--  this section was written with https://chat.openai.com/share/2d3a7483-b6cb-42b3-8efd-8ccf3b006bca-->
       <h2>About Us</h2>
-      <p>Proin odio est, ullamcorper ut porta eget, viverra volutpat est. Vivamus eu scelerisque mi, quis sodales
-        lectus. Nunc vulputate massa sit amet sapien accumsan imperdiet. Nulla in ipsum et sem porttitor tristique vitae
-        nec mauris. Nam eget fermentum diam, aliquam bibendum turpis. Donec egestas aliquet tellus, vitae ultricies
-        libero feugiat quis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-        egestas. Vivamus et aliquam massa, at semper augue.</p>
+      <p> At Cliptech Inc, we're more than just a tech company we're innovators on a mission to transform the digital
+        landscape.
+        With a passion for pushing boundaries and a commitment to excellence, we specialize in creating cutting-edge
+        solutions that
+        empower businesses to thrive in the ever-evolving world of technology.
+        Our team of inavative professionals brings together a diverse range of expertise,
+        from software development and web design to cybersecurity and artificial intelligence.
+        Whether it's crafting intuitive user interfaces, implementing robust cybersecurity measures,
+        or harnessing the power of data analytics, we're dedicated to delivering bespoke solutions that drive real
+        results. </p>
     </div>
   </section>
 
@@ -126,10 +129,11 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Portfolio Item">
+            <img src="16NIKE-v3.png" class="card-img-top" alt="Portfolio Item">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5 class="card-title">Nike </h5>
+              <p class="card-text">This is only a one of few amazing websites we created for our partnered company's.
+              </p>
             </div>
           </div>
         </div>
@@ -137,8 +141,8 @@
           <div class="card">
             <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Portfolio Item">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5 class="card-title">McDonald's</h5>
+              <p class="card-text">Our company creates websites that can be eyecatching and unique to all customers.</p>
             </div>
           </div>
         </div>
@@ -146,8 +150,8 @@
           <div class="card">
             <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Portfolio Item">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5 class="card-title">Adidas</h5>
+              <p class="card-text">Another one of our partenring companys we created websites for.</p>
             </div>
           </div>
         </div>
@@ -185,9 +189,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Contact Information</h5>
-              <p class="card-text">Email: info@webwise.com</p>
-              <p class="card-text">Phone: +1 (123) 456-7890</p>
-              <p class="card-text">Address: 123 WebWise Street, City, Country</p>
+              <p class="card-text">Email: info@CliptechInc.com</p>
+              <p class="card-text">Phone: +1 (347) 546-7890</p>
+              <p class="card-text">Address: 131 Cliptech Street, New London, CT</p>
             </div>
           </div>
         </div>
@@ -198,7 +202,7 @@
   <footer class="footer">
     <div class="container text-center">
       <p>made with ❤️ </p>
-      <p>&copy; 2024 WebWise Consulting</p>
+      <p>&copy; 2024 Cliptech Inc</p>
     </div>
   </footer>
 
