our work + services

--- a/index.html
+++ b/index.html
@@ -129,33 +129,35 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="16NIKE-v3.png" class="card-img-top" alt="Portfolio Item">
-            <div class="card-body">
-              <h5 class="card-title">Nike </h5>
-              <p class="card-text">This is only a one of few amazing websites we created for our partnered company's.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Portfolio Item">
-            <div class="card-body">
-              <h5 class="card-title">McDonald's</h5>
-              <p class="card-text">Our company creates websites that can be eyecatching and unique to all customers.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Portfolio Item">
-            <div class="card-body">
-              <h5 class="card-title">Adidas</h5>
-              <p class="card-text">Another one of our partenring companys we created websites for.</p>
-            </div>
+            <a href="nike/home.html">
+              <img src="imgs/adidas-logo.png" class="card-img-top" alt="Portfolio Item">
+              <div class="card-body">
+                <h5 class="card-title">Nike </h5>
+                <p class="card-text">This is only a one of few amazing websites we created for our partnered company's.
+                </p>
+            </a>
           </div>
         </div>
       </div>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="imgs/mcdonalds-logo.png" class="card-img-top" alt="Portfolio Item">
+          <div class="card-body">
+            <h5 class="card-title">McDonald's</h5>
+            <p class="card-text">Our company creates websites that can be eyecatching and unique to all customers.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="imgs/nike-logo.webp" class="card-img-top" alt="Portfolio Item">
+          <div class="card-body">
+            <h5 class="card-title">Adidas</h5>
+            <p class="card-text">Another one of our partenring companys we created websites for.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
