--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Cliptech Inc</a>
+      <a class="navbar-brand" href="home.html">Cliptech Inc</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,19 +65,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="services.hmtl">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -97,109 +97,8 @@
     </div>
   </section>
 
-  <section id="about" class="section">
-    <div class="container">
-      <!--  this section was written with https://chat.openai.com/share/2d3a7483-b6cb-42b3-8efd-8ccf3b006bca-->
-      <h2>About Us</h2>
-      <p> At Cliptech Inc, we're more than just a tech company we're innovators on a mission to transform the digital
-        landscape.
-        With a passion for pushing boundaries and a commitment to excellence, we specialize in creating cutting-edge
-        solutions that
-        empower businesses to thrive in the ever-evolving world of technology.
-        Our team of inavative professionals brings together a diverse range of expertise,
-        from software development and web design to cybersecurity and artificial intelligence.
-        Whether it's crafting intuitive user interfaces, implementing robust cybersecurity measures,
-        or harnessing the power of data analytics, we're dedicated to delivering bespoke solutions that drive real
-        results. </p>
-    </div>
-  </section>
+  
 
-  <section id="services" class="section">
-    <div class="container">
-      <h2>Our Services</h2>
-
-      <!-- `JSON` parsing -->
-      <div class="row" id="servicesList">
-      </div>
-  </section>
-
-  <section id="portfolio" class="section">
-    <div class="container">
-      <h2>Portfolio</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <a href="nike/home.html">
-              <img src="imgs/nike-logo.webp" class="card-img-top" alt="Portfolio Item">
-              <div class="card-body">
-                <h5 class="card-title">Nike </h5>
-                <p class="card-text">This is only a one of few amazing websites we created for our partnered company's.
-                </p>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="imgs/mcdonalds-logo.png" class="card-img-top" alt="Portfolio Item">
-          <div class="card-body">
-            <h5 class="card-title">McDonald's</h5>
-            <p class="card-text">Our company creates websites that can be eyecatching and unique to all customers.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="imgs/adidas-logo.png" class="card-img-top" alt="Portfolio Item">
-          <div class="card-body">
-            <h5 class="card-title">Adidas</h5>
-            <p class="card-text">Another one of our partenring companys we created websites for.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <div class="row">
-        <div class="col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Send us a message</h5>
-              <form>
-                <div class="form-group">
-                  <label for="name">Your Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                </div>
-                <div class="form-group">
-                  <label for="email">Your Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                </div>
-                <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
-              </form>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Contact Information</h5>
-              <p class="card-text">Email: info@CliptechInc.com</p>
-              <p class="card-text">Phone: +1 (347) 546-7890</p>
-              <p class="card-text">Address: 131 Cliptech Street, New London, CT</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <footer class="footer">
     <div class="container text-center">
