--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
   <!-- CSS file -->
   <link rel="stylesheet" href="styles.css">
@@ -18,6 +16,16 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
   <script>
+    function sendMessage() {
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const message = document.getElementById('message').value;
+
+      // Display success message
+      const successMessage = document.getElementById('successMessage');
+      successMessage.style.display = 'block';
+    }
+
     document.addEventListener('DOMContentLoaded', function () {
       const servicesList = document.getElementById('servicesList');
       data = [
@@ -51,7 +59,6 @@
 
     })
   </script>
-
 </head>
 
 <body>
@@ -182,8 +189,10 @@
                   <label for="message">Message</label>
                   <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
+                <button type="button" onclick="sendMessage()" class="btn btn-primary">Send Message</button>
               </form>
+              <div id="successMessage" style="display: none; margin-top: 10px; color: green;">Message sent successfully!
+              </div>
             </div>
           </div>
         </div>
